Make 'Mark messages as read' a folder/account option
Hello,
we have several accounts that are shared between users. Servers don't track read status per client. So having some shared accounts for reading only I would like to keep the read status untouched on that account so that the original owner still sees it's new mails as unread. Therefore this option should be moved to the account attributes or even to the folder attributes as it could also be useful to have this setting per folder or Search Folder.
Of course you can keep the global option and just have the default setting inherited or overwritten per account or folder.
Edited by Milan Crha