evo-I#113 - Make 'Mark messages as read' a folder/account option

Related to https://gitlab.gnome.org/GNOME/evolution/issues/113